// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Field /> component should render correctly 1`] = `
<div
  className="field"
>
  <label
    htmlFor="input-something"
  >
    Some label
  </label>
  <div
    className="control"
  >
    <input
      className="input is-medium"
      id="input-something"
      name="something"
      placeholder="Some placeholder"
      type="text"
    />
  </div>
</div>
`;

exports[`<Field /> component should support label prop 1`] = `
<div
  className="field"
>
  <div
    className="control"
  >
    <input
      className="input is-medium"
      id="input-password"
      name="password"
      placeholder="Some placeholder"
      type="password"
    />
  </div>
</div>
`;

exports[`<Field /> component should support type prop 1`] = `
<div
  className="field"
>
  <label
    htmlFor="input-password"
  >
    Some label
  </label>
  <div
    className="control"
  >
    <input
      className="input is-medium"
      id="input-password"
      name="password"
      placeholder="Some placeholder"
      type="password"
    />
  </div>
</div>
`;
